--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,7 @@ button.ghost {
     top: 0 !important;
     width: 80mm !important;       /* largura deve bater com o @page */
     max-width: 80mm !important;
+    min-height: 140mm !important;
     padding: 3px !important;
     margin: 0 !important;
     background: #fff !important;
